--- a/just_blog/templates/app_auth/profile_public_detail.html
+++ b/just_blog/templates/app_auth/profile_public_detail.html
@@ -7,16 +7,13 @@
 {% block body %}
     <section class="section-offset">
         <div class="container auth-content">
-            <h1 class="auth-title profile-detail-title">{% trans 'Your profile' %}</h1>
+            <h1 class="auth-title profile-detail-title">{{profile.user.username}}</h1>
 
             <div class="profile-content">
                 <p class="profile-content-para">
                     {% if profile.avatar %}
                         <img class="profile_page_avatar" src="{{ profile.avatar.url }}" alt="">
                     {% endif %}
-                </p>
-                <p class="profile-content-para">
-                    {% trans 'Username' %}: {{ profile.user.username }}
                 </p>
                 <p class="profile-content-para">
                     {% if profile.user.first_name %}
@@ -45,8 +42,8 @@
                 </p>
             </div>
             <p class="profile-update-btn">
-                <a class="a-reset btn register__btn" href="{% url 'app_auth:profile_update' pk=profile.pk %}">
-                    Update profile
+                <a class="a-reset btn register__btn" href="{% url 'app_blog:user_blog_list' pk=profile.pk %}">
+                    {% trans "To user's blogs" %}
                 </a>
             </p>
         </div>
