--- a/just_blog/templates/app_blog/blog_detail.html
+++ b/just_blog/templates/app_blog/blog_detail.html
@@ -1,10 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% load i18n %}
+{% load blog_tags %}
+
+{% block title %}
+    {% trans 'Blog' %}#{{ blog.pk }}
+{% endblock %}
+
+{% block body %}
+    <section class="section-offset">
+        <div class="container">
+            <div class="title-container flex">
+                <h1 class="blog-detail-title blog-title">{{ blog.title }}</h1>
+                <p class="title-description">{{ blog.description }}</p>
+            </div>
+            {% if blog.posts.all %}
+                <ul class="list-reset posts__list">
+                    {% for post in blog.posts.all %}
+                        <a class="a-reset" href="{% url 'app_blog:post_detail' pk=post.pk %}">
+                            <li class="blog__card flex">
+                                <p class="blog__card__item post__card__title">{{ post.title }}</p>
+                                <p class="blog__card__item post__card__tag">{{ post.get_tag|break_tags|safe }}</p>
+
+                                 {% if post.images.all %}
+                                    {% with post.images.all|random as random_image %}
+                                        <img class="blog__card__image" src="{{ random_image.image.url }}" alt="">
+                                    {% endwith %}
+                                 {% endif %}
+                            </li>
+                        </a>
+                    {% endfor %}
+                </ul>
+
+            {% else %}
+                <p class="no-posts-msg">{% trans 'No posts yet. Add your first one' %}</p>
+            {% endif %}
+        {% if blog.profile == profile %}
+            <p class="new_post_btn_para">
+                <a class="a-reset btn register__btn" href="{% url 'app_blog:post_new' pk=blog.pk %}">{% trans 'Add a post' %}</a>
+            </p>
+        {% endif %}
+        </div>
+    </section>
+{% endblock %}
