--- a/just_blog/templates/base.html
+++ b/just_blog/templates/base.html
@@ -21,12 +21,24 @@
                         <a class="logo a-reset transition-link" href="{% url 'app_main:index' %}">. just_BLOGS</a>
                         <nav class="header__nav">
                             <ul class="list-reset flex header__list">
-                                <li class="header__item">
-                                    <a class="transition-link a-reset" href="#">Latest posts</a>
-                                </li>
-                                <li class="header__item">
-                                    <a class="transition-link a-reset" href="#">My blog</a>
-                                </li>
+                               <li class="header__item">
+                                    <a class="transition-link a-reset" href="{% url 'app_blog:posts_latest'%}">
+                                        {% trans 'Latest posts' %}
+                                    </a>
+                               </li>
+                                {% if request.user.is_authenticated %}
+
+                                    <li class="header__item">
+                                        <a class="transition-link a-reset" href="{% url 'app_auth:profile_detail' pk=profile.pk %}">
+                                            {% trans 'My profile' %}
+                                        </a>
+                                    </li>
+                                    <li class="header__item">
+                                        <a class="transition-link a-reset" href="{% url 'app_blog:user_blog_list' pk=profile.pk%}">
+                                            {% trans 'My blogs' %}
+                                        </a>
+                                    </li>
+                                {% endif %}
                                 <li class="header__item">
                                     <a class="transition-link a-reset" href="#">About</a>
                                 </li>
@@ -36,8 +48,12 @@
                             </ul>
                         </nav>
                         <div class="header__auth">
-                            <a class="btn auth__btn a-reset" href="#">Login</a>
-                            <a class="btn auth__btn a-reset" href="{% url 'app_auth:get_started' %}">Get started</a>
+                            {% if request.user.is_authenticated %}
+                                <a class="btn auth__btn a-reset" href="{% url 'app_auth:logout' %}">Logout</a>
+                            {% else %}
+                                <a class="btn auth__btn a-reset" href="{% url 'app_auth:login' %}">Login</a>
+                                <a class="btn auth__btn a-reset" href="{% url 'app_auth:get_started' %}">Get started</a>
+                            {% endif %}
                         </div>
                     </div>
                 </header>
@@ -71,5 +87,9 @@
             </footer>
         {% endblock %}
     </div>
+    <script>
+        {% block script %}
+        {% endblock %}
+    </script>
 </body>
 </html>
