--- a/just_blog/static/css/style.css
+++ b/just_blog/static/css/style.css
@@ -9,6 +9,10 @@ html {
   box-sizing: inherit;
 }
 
+script {
+  display: none;
+}
+
 /*a {*/
 /*  color: inherit;*/
 /*  text-decoration: none;*/
@@ -34,7 +38,7 @@ body {
 
 #page-container {
   position: relative;
-  min-height: 100vh;
+  min-height: 50vh;
 }
 
 #content-wrap {
@@ -47,6 +51,11 @@ body {
 
 .list-reset {
   list-style: none;
+}
+
+.title {
+  font-size: 48px;
+  margin-bottom: 48px;
 }
 
 .a-reset {
@@ -89,7 +98,9 @@ body {
   padding-bottom: 160px;
 }
 
-.btn {
+.btn, .update-form input[type=file]::file-selector-button,
+.post-form input[type=file]::file-selector-button {
+  font-family: 'Josefin Sans', Arial, Verdana, sans-serif;
   cursor: pointer;
   color: #bccaa8;
   background-color: transparent;
@@ -98,13 +109,14 @@ body {
   transition: color .3s ease-in-out, border-color .3s ease-in-out;
 }
 
-.btn:active {
+.btn:active, .update-form input[type=file]::file-selector-button:active,
+.post-form input[type=file]::file-selector-button:active {
   color: saddlebrown;
   border-color: saddlebrown;
 
 }
 
-.btn:hover {
+.btn:hover, .update-form input[type=file]::file-selector-button:hover {
   color: sandybrown;
   border-color: sandybrown;
 }
@@ -209,13 +221,407 @@ body {
   margin-bottom: 10px;
 }
 
-.auth-form input {
+.input {
+  background-color: transparent;
+  border: 1px solid #bccaa8;
+  border-radius: 90px;
+  font-family: 'Josefin Sans', Arial, Verdana, sans-serif;
+  transition: border-color .3s ease-in-out;
   font-size: 20px;
-  padding: 2px 5px;
+  padding: 6px 5px;
   text-align: center;
 }
+
+.age-input {
+  font-size: 20px;
+  padding: 3px 8px;
+  padding-top: 6px;
+}
+
+.email-input {
+  width: 300px;
+}
+
+
+/*border-color: sandybrown*/
+
+.input:focus {
+  outline: none;
+}
+
+.update-form p {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+/*.auth-form input {*/
+/*  font-size: 20px;*/
+/*  padding: 2px 5px;*/
+/*  text-align: center;*/
+/*}*/
+
+/*.auth-form select {*/
+/*  font-size: 15px;*/
+/*}*/
 
 .register__btn {
   font-size: 20px;
   padding: 8px 15px;
+}
+
+.image_input {
+  padding-top: 18px;
+}
+
+.avatar-input-label {
+  /*padding: 10px 0;*/
+}
+
+.update-form input[type=file],
+.post-form input[type=file] {
+  font-family: 'Josefin Sans', Arial, Verdana, sans-serif;
+  font-size: 20px;
+}
+
+.update-form input[type=file]::file-selector-button,
+.post-form input[type=file]::file-selector-button {
+  padding: 10px 15px;
+}
+
+.update-form p {
+  display: flex;
+  flex-wrap: wrap;
+  width: 600px;
+  gap: 10px;
+  align-items: center;
+}
+
+.profile_page_avatar {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
+
+.profile-detail-title {
+  margin-bottom: 0.8em;
+}
+
+.profile-content {
+  margin-bottom: 1em;
+  font-size: 20px;
+}
+
+.profile-content-para:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.profile-update-btn {
+  padding: 10px 0;
+}
+
+
+.no-blogs-msg {
+  margin-bottom: 24px;
+}
+
+.blogs__list {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  row-gap: 3rem;
+  column-gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.blog__card {
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+  transition: box-shadow .3s ease-in-out;
+}
+
+.blog__card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.blog__card__title {
+  font-size: 1.5em;
+  margin-bottom: 1em;
+}
+
+.blog__card__image {
+    width:  100px;
+    height: 100px;
+    object-fit: cover;
+}
+
+
+.blog__card__item {
+  text-align: center;
+}
+
+.blog-detail-title {
+  text-align: center;
+  margin-bottom: 1em;
+  font-size: 3em;
+
+}
+
+.blog-form {
+  font-size: 20px;
+}
+
+.blog-title-input {
+  width: 400px;
+}
+
+.blog-form p,
+.post-form p {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.blog-form p:last-child,
+.post-form p:last-child {
+  margin-bottom: 0;
+}
+
+.blog-title {
+  margin-bottom: 24px;
+}
+
+.no-posts-msg {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.title-container {
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 26px;
+}
+
+.title-description {
+  font-size: 24px;
+}
+
+.posts__list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  row-gap: 3rem;
+  column-gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.new_post_btn_para {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post__card__title {
+  font-size: 24px;
+  margin-bottom: 6px;
+}
+
+.post__card__tag {
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+
+.post-title {
+  margin-bottom: 8px;
+}
+
+.post-form {
+  font-size: 20px;
+  margin-bottom: 24px;
+}
+
+.post-form label {
+  display: inline-block;
+  cursor: pointer;
+  /*width: 100%;*/
+}
+
+.check-for-delete-input {
+  visibility: hidden;
+}
+
+.post-title-input {
+  width: 400px;
+}
+
+.check-for-delete-input:checked ~ .post-edit-img {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.title-tag {
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.post-author-title {
+  margin-bottom: 12px;
+}
+
+.is_published {
+  font-size: 24px;
+}
+
+.post-content-container {
+  font-size: 20px;
+  line-height: 20px;
+  margin-bottom: 32px;
+}
+
+.post-content-container p:not(:last-child) {
+  margin-bottom: 12px;
+}
+
+.post-images-container {
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-bottom: 32px;
+}
+
+/* latest posts */
+
+.post-list-title {
+  color: floralwhite;
+  font-size: 128px;
+  text-align: center;
+}
+
+.post-card:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.public-avatar {
+  width: 50px;
+  height: 50px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.public-avatar-link {
+  display: inline-block;
+}
+
+.avatar-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.avatar-icon, .public-avatar {
+  margin-right: 1%;
+
+}
+
+.post-card-header {
+  align-items: center;
+  margin-bottom: 6px;
+  gap: 8px;
+}
+
+.post-header-info {
+  color: #bccaa8;
+}
+
+.post-content-item {
+  margin-bottom: 6px;
+}
+
+.content-item-title {
+  font-size: 18px;
+}
+
+/* slideshow carousel */
+
+.images-box {
+  float: left;
+  max-width: 30%;
+  margin-bottom: 12px;
+  margin-right: 12px;
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
