internalization in process

--- a/just_blog/templates/app_auth/profile_public_detail.html
+++ b/just_blog/templates/app_auth/profile_public_detail.html
@@ -17,7 +17,7 @@
                 </p>
                 <p class="profile-content-para">
                     {% if cur_profile.user.first_name %}
-                        {% trans 'Firstname' %}: {{ cur_profile.user.first_name }}
+                        {% trans 'First name' %}: {{ cur_profile.user.first_name }}
                     {% endif %}
                 </p>
                 <p class="profile-content-para">
@@ -27,7 +27,7 @@
                 </p>
                 <p class="profile-content-para">
                     {% if cur_profile.user.email %}
-                        {% trans 'Email address' %}: {{ cur_profile.user.email }}
+                        {% trans 'Email' %}: {{ cur_profile.user.email }}
                     {% endif %}
                 </p>
                 <p class="profile-content-para">
