--- a/just_blog/templates/app_blog/post_delete.html
+++ b/just_blog/templates/app_blog/post_delete.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans 'Delete post#' %}{{ post.pk }}
+    {% trans 'Delete post' %}#{{ post.pk }}
 {% endblock %}
 
 {% block body %}
