--- a/just_blog/static/css/style.css
+++ b/just_blog/static/css/style.css
@@ -56,6 +56,7 @@ body {
 .title {
   font-size: 48px;
   margin-bottom: 48px;
+  line-height: 54px;
 }
 
 .a-reset {
@@ -190,12 +191,18 @@ body {
 }
 
 .hero__container {
-  justify-content: space-between;
+  width: 100%;
+  gap: 10%;
   align-items: center;
+}
+
+.hero__main {
+  width: 50%;
 }
 
 .latest-posts-rss {
   margin: 0;
+  width: 40%;
 }
 
 .latest-posts__link {
@@ -276,7 +283,7 @@ body {
 .update-form p {
   display: flex;
   flex-wrap: wrap;
-  width: 550px;
+  width: 638px;
   gap: 10px;
   align-items: center;
 }
@@ -313,6 +320,10 @@ body {
 .update-form input[type=file]::file-selector-button,
 .post-form input[type=file]::file-selector-button {
   padding: 10px 15px;
+}
+
+#id_images {
+  visibility: hidden;
 }
 
 .profile_page_avatar {
@@ -404,6 +415,23 @@ body {
 .blog-form p:last-child,
 .post-form p:last-child {
   margin-bottom: 0;
+}
+
+.form-post-box {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.form-post-box:last-child {
+  margin-bottom: 0;
+}
+
+.post_images_label {
+  width: 155px;
+  height: 40px;
+
 }
 
 .blog-title {
@@ -524,7 +552,7 @@ body {
 
 .post-text-container {
   font-size: 20px;
-  line-height: 20px;
+  line-height: 32px;
   margin-bottom: 32px;
   min-height: 100%;
 }
@@ -599,7 +627,7 @@ body {
 
 .images-box {
   float: left;
-  max-width: 50%;
+  width: 50%;
   margin-bottom: 12px;
   margin-right: 12px;
 }
