--- a/just_blog/templates/app_blog/blog_edit.html
+++ b/just_blog/templates/app_blog/blog_edit.html
@@ -8,11 +8,11 @@
 {% block body %}
     <section class="section-offset">
         <div class="container">
-            <h1 class="title">Edit the blog {{ blog.pk }}</h1>
+            <h1 class="title">{% trans 'Edit the blog' %} {{ blog.pk }}</h1>
             <form method="post" class="blog-form">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button class="btn register__btn" type="submit">Edit</button>
+                <button class="btn register__btn" type="submit">{% trans 'Edit' %}</button>
             </form>
         </div>
     </section>
